Remove label from form error text
Purely aesthetic - don't really like how things look with the label
included in the error text.

--- a/app/templates/_formhelpers.html
+++ b/app/templates/_formhelpers.html
@@ -14,7 +14,7 @@
 
         {% if field.errors %}
             <div class="invalid-feedback">
-                {{ field.label.text }}: {{ field.errors[0] }}
+                {{ field.errors[0] }}
             </div>
         {% endif %}
     </div>
