--- a/app/templates/dashboard/edit_category_group_form.html
+++ b/app/templates/dashboard/edit_category_group_form.html
@@ -7,6 +7,8 @@
         {{ form_group(edit_category_group_form.new_category_group) }}
     </div>
     <div class="modal-footer">
+        <button type="button" class="btn btn-danger mr-auto" data-dismiss="modal">Delete</button>
+
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
         {{ edit_category_group_form.submit(class_="btn btn-primary") }}
     </div>
