Fix formatting of category group names

--- a/app/templates/dashboard/base.html
+++ b/app/templates/dashboard/base.html
@@ -30,19 +30,19 @@
             cursor: pointer;
         }
 
-        span[data-target="#editCategoryGroupModal"] {
+        .category-group-name {
             cursor: pointer;
         }
 
-        span[data-target="#editCategoryGroupModal"] .feather {
+        .category-group-name .feather {
             display: none;
         }
 
-        span[data-target="#editCategoryGroupModal"]:hover .feather {
+        .category-group-name:hover .feather {
             display: inline;
         }
 
-        span[data-target="#editCategoryGroupModal"]:hover .feather:hover {
+        .category-group-name:hover .feather:hover {
             color: #212529;
         }
     </style>
