--- a/app/templates/dashboard/budget.html
+++ b/app/templates/dashboard/budget.html
@@ -25,7 +25,7 @@
                             <span class="expander" data-target=".budget-category-{{ category_group.id }}" data-toggle="collapse" aria-expanded="true">
                                 <span data-feather="chevron-down"></span>
                             </span>
-                            <span>
+                            <span class="category-group-name">
                                 <span data-toggle="modal" data-target="#editCategoryGroupModal"> {{ category_group.name }} </span>
                                 <span data-toggle="modal" data-target="#addCategoryModal" data-feather="plus-circle"></span>
                             </span>
