--- a/app/templates/dashboard/budget.html
+++ b/app/templates/dashboard/budget.html
@@ -19,8 +19,8 @@
         </thead>
         {% if category_groups %}
             {% for category_group in category_groups %}
-                <tbody class="sortable">
-                    <tr class="thead-light nosort">
+                <tbody id="budget-category-{{ category_group.id }}" class="sortable">
+                    <tr class="thead-light nosort" data-id="category-group-{{ category_group.id }}">
                         <th>
                             <span class="expander" data-target=".budget-category-{{ category_group.id }}" data-toggle="collapse" aria-expanded="true">
                                 <span data-feather="chevron-down"></span>
@@ -35,7 +35,7 @@
                         <th>$0.00</td>
                     </tr>
                     {% for category in category_group.children %}
-                        <tr class="budget-category-{{ category_group.id }} collapse show">
+                        <tr class="budget-category-{{ category_group.id }} collapse show" data-id="category-{{ category.id }}">
                             <th scope="row" data-toggle="modal" data-target="#editCategoryModal"> {{ category.name }} </th>
                             <td>$0.00</td>
                             <td>$0.00</td>
@@ -120,7 +120,6 @@
                     if (event.related.nextElementSibling === freezed) {
                         return -1;
                     }
-
                     return freezed !== event.related;
                 },
                 onAdd: function(event) {
@@ -134,6 +133,26 @@
                         'new_category_group': new_category_group
                         }
                     );
+                },
+                store: {
+                    /**
+                     * Get the order of elements. Called once during initialization.
+                     * @param   {Sortable}  sortable
+                     * @returns {Array}
+                     */
+                    get: function (sortable) {
+                        var order = localStorage.getItem(sortable.el.id);
+                        return order ? order.split('|') : [];
+                    },
+
+                    /**
+                     * Save the order of elements. Called onEnd (when the item is dropped).
+                     * @param {Sortable}  sortable
+                     */
+                    set: function (sortable) {
+                        var order = sortable.toArray();
+                        localStorage.setItem(sortable.el.id, order.join('|'));
+                    }
                 }
             });
 
