Update when add category appears

--- a/app/templates/dashboard/budget.html
+++ b/app/templates/dashboard/budget.html
@@ -42,7 +42,7 @@
             display: none;
         }
 
-        .category-group-name:hover .feather {
+        th:hover .category-group-name .feather {
             display: inline;
         }
 
