Fix issue with sizing of section/aside

--- a/app/templates/dashboard/budget.html
+++ b/app/templates/dashboard/budget.html
@@ -62,7 +62,7 @@
             padding: 0;
             font-size: .875rem;
             border-top: 1px solid rgb(222, 226, 230);
-            width: 25%;
+            
         }
     </style>
 {% endblock %}
@@ -91,7 +91,7 @@
         </div>
     </header>
 
-    <section role="main">
+    <section role="main" class="w-75">
         <table class="table table-sm">
             <thead>
                 <tr>
@@ -132,7 +132,7 @@
         </table>
     </section>
     
-    <aside role="complementary" class="budget-details bg-light">
+    <aside role="complementary" class="budget-details bg-light w-25">
         <div class="d-flex flex-column justify-content-end align-items-center py-3">
             <h6 class="text-uppercase text-muted mb-1">Total Budgeted</h6>
             <h2 class="mb-0">$0.00</h2>
