Add input fields to budgeted columns

--- a/app/templates/dashboard/budget.html
+++ b/app/templates/dashboard/budget.html
@@ -62,7 +62,28 @@
             padding: 0;
             font-size: .875rem;
             border-top: 1px solid rgb(222, 226, 230);
-            
+        }
+
+        table td {
+            width: 25%;
+        }
+
+        table td input {
+            height: 100%;
+            width: 100%;
+            background: transparent;
+            border-color: transparent;
+            border-radius: .4rem;
+            margin: 0;
+            text-align: left;
+        }
+
+        table td:hover input,
+        table td input:focus {
+            outline: none;
+            border: .125rem solid #009cc2;
+            background-color: #fff;
+            color: #333;
         }
     </style>
 {% endblock %}
@@ -114,16 +135,18 @@
                                     <span data-toggle="modal" data-target="#addCategoryModal" data-feather="plus-circle"></span>
                                 </span>
                             </th>
-                            <th>$0.00</td>
-                            <th>$0.00</td>
-                            <th>$0.00</td>
+                            <th><span class="px-1">$0.00</span></td>
+                            <th><span class="px-1">$0.00</span></td>
+                            <th><span class="px-1">$0.00</span></td>
                         </tr>
                         {% for category in category_group.children %}
                             <tr class="budget-category-{{ category_group.id }} collapse show" data-id="category-{{ category.id }}">
                                 <th class="category-name" scope="row" data-toggle="modal" data-target="#editCategoryModal"> {{ category.name }} </th>
-                                <td>$0.00</td>
-                                <td>$0.00</td>
-                                <td>$0.00</td>
+                                <td>
+                                    <input type="text" value="$0.00" class="px-1">
+                                </td>
+                                <td><span class="px-1">$0.00</span></td>
+                                <td><span class="px-1">$0.00</span></td>
                             </tr>
                         {% endfor %}
                     </tbody>
