--- a/app/templates/dashboard/budget.html
+++ b/app/templates/dashboard/budget.html
@@ -56,6 +56,7 @@
 
         .budget-details {
             position: fixed;
+            width: 21%;
             top: 101px;
             bottom: 0;
             right: 0;
@@ -155,7 +156,7 @@
         </table>
     </section>
     
-    <aside role="complementary" class="budget-details bg-light w-25">
+    <aside role="complementary" class="budget-details bg-light">
         <div class="d-flex flex-column justify-content-end align-items-center py-3">
             <h6 class="text-uppercase text-muted mb-1">Total Budgeted</h6>
             <h2 class="mb-0">$0.00</h2>
