--- a/app/templates/dashboard/budget.html
+++ b/app/templates/dashboard/budget.html
@@ -137,7 +137,7 @@
                                 </span>
                             </th>
                             <th>
-                                <span class="category-group-balance px-1">{{ '$%.2f'|format(category_group.balance()) }}</span>
+                                <span class="category-group-balance px-1">{{ '$%.2f'|format(category_group.balance(month=month)) }}</span>
                             </th>
                             <th><span class="px-1">$0.00</span></th>
                             <th><span class="px-1">$0.00</span></th>
@@ -146,7 +146,7 @@
                             <tr class="budget-category-{{ category_group.id }} collapse show" data-id="category-{{ category.id }}">
                                 <th class="category-name" scope="row" data-toggle="modal" data-target="#editCategoryModal"> {{ category.name }} </th>
                                 <td>
-                                    <input type="text" value="{{ '$%.2f'|format(category.balance()) }}" class="px-1">
+                                    <input type="text" value="{{ '$%.2f'|format(category.balance(month=month)) }}" class="px-1">
                                 </td>
                                 <td><span class="px-1">$0.00</span></td>
                                 <td><span class="px-1">$0.00</span></td>
